[package]
name = "heist_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "heist_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang ={version= "0.29.0",features=["init-if-needed"]}
anchor-spl = {version="0.29.0"}
mpl-token-metadata = "4.1.2"
solana-program="1.18.12"
solana-sdk={version="1.18.12",default-features=false}
toml_edit="0.22.12"